<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:compat="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.imageeditor3.PreviewActivity" >


    <!--
    <item android:id="@+id/menu_save"
          android:title="@string/menu_save"/>
	-->

	<item
	    android:id="@+id/action_open_album"
	    android:icon="@drawable/ic_photo_white_48dp"
	    android:orderInCategory="1"
	    android:showAsAction="ifRoom"
	    android:title="@string/action_open_album"/>

	<item
	    android:id="@+id/action_save"
	    android:icon="@drawable/save"
	    android:orderInCategory="2"
	    android:showAsAction="ifRoom"
	    android:title="@string/action_save"/>

	<item
	    android:id="@+id/action_settings"
	    android:icon="@drawable/ic_settings_white_48dp"
	    android:orderInCategory="3"
	    android:showAsAction="ifRoom"
	    android:title="@string/action_settings" />

	<item
	    android:id="@+id/action_show_maskimage"
	    android:orderInCategory="4"
	    android:showAsAction="never"
	    android:title="@string/action_show_maskimage"/>

	<item
	    android:id="@+id/action_show_outputimage"
	    android:orderInCategory="5"
	    android:showAsAction="never"
	    android:title="@string/action_show_outputimage"/>

	<item
	    android:id="@+id/action_src_select"
	    android:orderInCategory="6"
	    android:showAsAction="never"
	    android:title="@string/action_src_select"/>

	<item
	    android:id="@+id/action_src_take"
	    android:orderInCategory="7"
	    android:showAsAction="never"
	    android:title="@string/action_src_take"/>

	<item
	    android:id="@+id/action_blending"
	    android:orderInCategory="8"
	    android:showAsAction="never"
	    android:title="@string/action_blending"/>

</menu>
